--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 atomicwrites==1.4.1
 attrs==22.1.0
+blinker==1.5
 Brotli==1.0.9
 certifi==2022.6.15
 cffi==1.15.1
@@ -7,6 +8,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
 ConfigArgParse==1.5.3
+coverage==6.4.4
 Flask==2.2.2
 Flask-BasicAuth==0.2.0
 Flask-Cors==3.0.10
@@ -27,7 +29,9 @@ py==1.11.0
 pycparser==2.21
 pyparsing==3.0.9
 pytest==7.1.2
+pytest-cov==3.0.0
 pytest-flask==1.2.0
+pytest-mock==3.8.2
 pywin32==304
 pyzmq==22.3.0
 requests==2.28.1
